--- a/css/code.css
+++ b/css/code.css
@@ -153,7 +153,7 @@ pre.line-numbers > div > span:nth-child(odd) {
 pre b,
 pre strong {
   font-weight: normal;
-  color: #039;
+  color: blue;
 }
 pre u,
 pre u b,
@@ -161,23 +161,17 @@ pre u strong {
   text-decoration: none;
   color: red;
 }
-pre i,
-pre em,
-pre i *,
-pre em *,
-pre i * *,
-pre em * * {
+pre i,pre i *,pre i * *
+{
   letter-spacing: -0.1em;
   text-decoration: none;
   font-style: normal;
   color: gray;
 }
+pre em,pre em *,pre em * * {
 
-#code-1 {
-  color: black;
-  text-align: left;
-  direction: ltr;
-  position: absolute;
-  top: 110px;
-  left: 10px;
+  letter-spacing: -0.1em;
+  text-decoration: none;
+  font-style: normal;
+  color: orange;
 }
