--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ html,body {
   padding: 0;
   background: #232323;
   color: #cdcdcd;
-  font-family: "Avenir Next", "Avenir", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
 /* 
   font: normal normal normal 100%/1.4 georgia, serif; */
@@ -98,6 +98,7 @@ h1 {
   margin-left: 300px;
   top: 80px;
   margin-right: 50px;
+  
 
 }
 
@@ -108,6 +109,7 @@ h1 {
   margin-left: 300px;
   top: 120px;
   margin-right: 50px;
+  margin-left: 600px;
 }
 
 
