--- a/css/arrays-style.css
+++ b/css/arrays-style.css
@@ -4,7 +4,7 @@
     text-align: left;
     direction: ltr;
     position: absolute;
-    top:320px;
+    top:300px;
     left: 10px;
     
   }
@@ -13,7 +13,16 @@
     text-align: left;
     direction: ltr;
     position: absolute;
-    top:850px;
+    top:750px;
+    left: 10px;
+    
+  }
+  #code-3 {
+    color: black;
+    text-align: left;
+    direction: ltr;
+    position: absolute;
+    top:1200px;
     left: 10px;
     
   }
