--- a/css/code.css
+++ b/css/code.css
@@ -1,29 +1,10 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-
-  background: #f5f5f5;
-  color: #444;
-
-  font: normal normal normal 100%/1.4 georgia, serif;
-}
-main {
-  display: block;
-
-  width: 55%;
-  min-width: 18em;
-  margin: 2em auto;
-}
 
 figure {
+  font-size: 20px;
   display: block;
-
   margin: 1em 0;
-
   border: 1px solid #ccc;
   border-radius: 3px;
-
   background: #eee;
 }
 
