--- a/css/styles.css
+++ b/css/styles.css
@@ -101,132 +101,55 @@ a:hover {
 
 .head-right {
   color: #0099ff;
-  margin-top: 100px;
+  margin-top: 30px;
   margin-right: 50px;
   text-align: right;
 }
 /******** Id ********/
+.sidenav-icon{
+  margin: 18px 24px 0 0;
+  font-size: 20px;
+  color: #818181;
+}
 
-
-#menuToggle {
-  display: block;
-  position: absolute;
-  top: 50px;
-  right: 50px;
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
   z-index: 1;
-  -webkit-user-select: none;
-  user-select: none;
+  top: 0;
+  right: 0;
+  background-color: #658DBC;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
-#menuToggle input {
+
+.sidenav a {
+  padding: 32px 20px 0;
+  text-decoration: none;
+  font-size: 25px;
+  color: #fff;
   display: block;
-  width: 40px;
-  height: 32px;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #686d76;
+}
+
+.sidenav .closebtn {
   position: absolute;
-  top: -7px;
-  left: -5px;
-
-  cursor: pointer;
-
-  opacity: 0;
-  /* hide this */
-  z-index: 2;
-  /* and place it over the hamburger */
-
-  -webkit-touch-callout: none;
+  top: -30px;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
-/*
-  * Just a quick hamburger
-  */
-#menuToggle span {
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-
-  background: #cdcdcd;
-  border-radius: 3px;
-
-  z-index: 1;
-
-  transform-origin: 4px 0px;
-
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-    opacity 0.55s ease;
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
-
-#menuToggle span:first-child {
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2) {
-  transform-origin: 0% 100%;
-}
-
-/* 
-  * Transform all the slices of hamburger
-  * into a crossmark.
-  */
-#menuToggle input:checked~span {
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-/*
-  * But let's hide the middle one.
-  */
-#menuToggle input:checked~span:nth-last-child(3) {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
-  * Ohyeah and the last one should go the other direction
-  */
-#menuToggle input:checked~span:nth-last-child(2) {
-  opacity: 1;
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
-  * Make this absolute positioned
-  * at the top left of the screen
-  */
-#menu {
-  position: absolute;
-  width: 300px;
-  margin: -100px 0 0 0;
-  padding: 50px;
-  padding-top: 125px;
-  right: -100px;
-
-  background: #ededed;
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-
-  transform-origin: 0% 0%;
-  transform: translate(100%, 0);
-
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-}
-
-#menu li {
-  padding: 10px 0;
-  font-size: 22px;
-}
-
-/*
-  * And let's fade it in from the left
-  */
-#menuToggle input:checked~ul {
-  transform: none;
-  opacity: 1;
-}
-
 
 /*paragraph*/
 .para {
